objects/Cost_Matrix__c.object
<CustomObject>
    <description>Commercial:
Object created to store the EPC Cost matrix used by the PPA Proposal tool
Allows for state by state cost breakdown of BOS Costs (Materials,Labor,etc)
PO: Miltiadis Vratimos
PPA Proposal Project: https://www.pivotaltracker.com/epic/show/3273633
Target Release: WW21-24</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Denotes if the Technology System is quotable</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Technology_Systems__c</fullName>
        <label>Available Technology Systems</label>
        <picklist>
            <controllingField>Technology_System_Category__c</controllingField>
            <picklistValues>
                <fullName>G-Helix Tracker V1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P-Helix Carport V1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Helix Dual Tilt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Helix Single Tilt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P-Helix Carport V1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P-Helix Carport V1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P-Non-Helix 360S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P-Non-Helix 360D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P-Non-Helix Garage Long Span</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P-Non-Helix Long Span 360</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sales_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Commercial:
Field look up to Sales Configuration 
Facilitates state by state cost breakdown of BOS Costs (Materials,Labor,etc)
PO: Miltiadis Vratimos
PPA Proposal Project: https://www.pivotaltracker.com/epic/show/3273633
Target Release: WW21-24</description>
        <label>Sales Configuration</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only PPA Sales Configurations my be attached to a Cost Matrix</errorMessage>
            <filterItems>
                <field>SalesConfiguration__c.Financial_Offering__c</field>
                <operation>equals</operation>
                <value>PPA</value>
            </filterItems>
            <infoMessage>Select the Sales Configuration for the State you wish to configure.
Only PPA Sales Configurations my be attached to a Cost Matrix.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SalesConfiguration__c</referenceTo>
        <relationshipLabel>Cost Matrix</relationshipLabel>
        <relationshipName>Cost_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT( Sales_Configuration__r.State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Category_Bucket__c</fullName>
        <formula>IF( 
   OR( 
      CONTAINS( TEXT(Technology_System_Category__c), &quot;Helix Roof&quot; ),
      ISPICKVAL( Technology_System_Category__c, &quot;Non-SPWR Roof Mounted Rail&quot; )
   ),
   &quot;Roof&quot;, 
   IF( 
      OR(
        ISPICKVAL( Technology_System_Category__c, &quot;Helix Tracker&quot; ),
        ISPICKVAL( Technology_System_Category__c, &quot;Non-SPWR Ground Fixed Tilt&quot; )
      ),
      &quot;Ground&quot;,
      &quot;Carport&quot;
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technology Category Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_System_Category__c</fullName>
        <description>Commercial:
Field created to store the EPC Cost matrix installation type (Technology System) used by the PPA Proposal tool
PO: Miltiadis Vratimos
PPA Proposal Project: https://www.pivotaltracker.com/epic/show/3273633
Target Release: WW21-24</description>
        <label>Technology System Category</label>
        <picklist>
            <picklistValues>
                <fullName>Garage Top Carport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-SPWR Ground Fixed Tilt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helix Carport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helix Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Span Carport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-SPWR Roof Mounted Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Carport (Non-Helix)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helix Roof-Single Tilt-P Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helix Roof-Dual Tilt-P Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helix Roof-Single Tilt-E/X Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helix Roof-Dual Tilt-E/X Series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Accounting_Misc_Cost__c</fullName>
        <description>Commercial: 
Field created to store the EPC Cost matrix summary of all accounting/misc costs used by the PPA Proposal tool 
PO: Miltiadis Vratimos 
PPA Proposal Project: https://www.pivotaltracker.com/epic/show/3273633 
Target Release: WW21-24</description>
        <inlineHelpText>Total not including System Commissioning fee(s)</inlineHelpText>
        <label>Total Accounting/Misc. Cost</label>
        <summarizedField>Cost_Matrix_Line__c.Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Matrix_Line__c.Cost_Category__c</field>
            <operation>equals</operation>
            <value>Accounting/Misc.</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Matrix_Line__c.Cost_Matrix__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Labor_Cost__c</fullName>
        <description>Commercial: 
Field created to store the EPC Cost matrix summary of all labor costs used by the PPA Proposal tool 
PO: Miltiadis Vratimos 
PPA Proposal Project: https://www.pivotaltracker.com/epic/show/3273633 
Target Release: WW21-24</description>
        <label>Total Labor Cost</label>
        <summarizedField>Cost_Matrix_Line__c.Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Matrix_Line__c.Cost_Category__c</field>
            <operation>equals</operation>
            <value>Labor</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Matrix_Line__c.Cost_Matrix__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Material_Cost__c</fullName>
        <description>Commercial: 
Field created to store the EPC Cost matrix summary of all material costs used by the PPA Proposal tool 
PO: Miltiadis Vratimos 
PPA Proposal Project: https://www.pivotaltracker.com/epic/show/3273633 
Target Release: WW21-24</description>
        <label>Total Material Cost</label>
        <summarizedField>Cost_Matrix_Line__c.Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Matrix_Line__c.Cost_Category__c</field>
            <operation>equals</operation>
            <value>Materials</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Matrix_Line__c.Cost_Matrix__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Cost Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Technology_System_Category__c</columns>
        <columns>Available_Technology_Systems__c</columns>
        <columns>Total_Material_Cost__c</columns>
        <columns>Total_Labor_Cost__c</columns>
        <columns>Total_Accounting_Misc_Cost__c</columns>
        <columns>Active__c</columns>
        <columns>State__c</columns>
        <columns>Sales_Configuration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BOS-{0000}</displayFormat>
        <label>Cost Matrix Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Matrix</pluralLabel>
    <recordTypes>
        <fullName>PPA</fullName>
        <active>true</active>
        <description>Costs associated to PPA Proposal BOS Costs</description>
        <label>PPA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>